ventura-network-infra.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: "This template provisions the Ventura Prod Network Infrastructure"
Metadata: {}

Parameters: 
  VenturaProdVPCciderBlockPara:
    Description: Please provide a CIDR block for the VenturaProVPC
    Type: String
    Default: 10.0.0.0/16

Mappings: {}

Conditions: {}

Resources: 
  VenturaProdVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VenturaProdVPCciderBlockPara
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: VenturaProdVPC
  #Ventura Prod ALB-NAT Gateway1 Public SN1       
  VenturaProdNATalbSN1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: "us-east-1a"
      VpcId: !Ref VenturaProdVPC
      CidrBlock: "10.0.1.0/28"
      Tags:
        - Key: Name
          Value: Ventura-Prod-NAT-ALB-Subnet-1

  VenturaProdALBSN2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: "us-east-1b"
      VpcId: !Ref VenturaProdVPC
      CidrBlock: "10.0.2.0/28"
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Ventura-Prod-ALB-Subnet-2

  VenturaProdWebSN1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: "us-east-1a"
      VpcId: !Ref VenturaProdVPC
      CidrBlock: "10.0.3.0/28"
      Tags:
        - Key: Name
          Value: Ventura-Prod-Web-Subnet-1

  VenturaProdWebSN2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: "us-east-1b"
      VpcId: !Ref VenturaProdVPC
      CidrBlock: "10.0.4.0/28"
      Tags:
        - Key: Name
          Value: Ventura-Prod-Web-Subnet-2

  VenturaProdAppSN1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: "us-east-1a"
      VpcId: !Ref VenturaProdVPC
      CidrBlock: "10.0.5.0/28"
      Tags:
        - Key: Name
          Value: Ventura-Prod-App-Subnet-1

  VenturaProdAppSN2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: "us-east-1b"
      VpcId: !Ref VenturaProdVPC
      CidrBlock: "10.0.6.0/28"
      Tags:
        - Key: Name
          Value: Ventura-Prod-App-Subnet-2

  VenturaProdDBSN1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: "us-east-1a"
      VpcId: !Ref VenturaProdVPC
      CidrBlock: "10.0.7.0/28"
      Tags:
        - Key: Name
          Value: Ventura-Prod-DB-Subnet-1

  VenturaProdDBSN2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: "us-east-1b"
      VpcId: !Ref VenturaProdVPC
      CidrBlock: "10.0.8.0/28"
      Tags:
        - Key: Name
          Value: Ventura-Prod-DB-Subnet-2

  VenturaProdIgw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: VenturaProdIgw
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VenturaProdVPC
      InternetGatewayId: !Ref VenturaProdIgw
  
  ## SUBNET ROUTE TABLES
  VenturaProdPublicRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VenturaProdVPC
      Tags:
        - Key: Name
          Value: VenturaProdPublicRouteTable1
  
  VenturaProdPublicRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VenturaProdVPC
      Tags:
        - Key: Name
          Value: VenturaProdPublicRouteTable2
  
  VenturaProdWebRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VenturaProdVPC
      Tags:
        - Key: Name
          Value: Ventura-prod-Web-RouteTable1
  
  VenturaProdWebRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VenturaProdVPC
      Tags:
        - Key: Name
          Value: Ventura-Prod-Web-RouteTable2

  VenturaProdAppRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VenturaProdVPC
      Tags:
        - Key: Name
          Value: Ventura-Prod-App-RouteTable1

  VenturaProdAppRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VenturaProdVPC
      Tags:
        - Key: Name
          Value: Ventura-Prod-App-RouteTable2

  VenturaProdDBRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VenturaProdVPC
      Tags:
        - Key: Name
          Value: Ventura-Prod-DB-RouteTable1

  VenturaProdDBRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VenturaProdVPC
      Tags:
        - Key: Name
          Value: Ventura-Prod-DB-RouteTable2

  ## ROUTE TABLE ASSOCIATIONS
  ## Associate the relevant route tables to their respective subnets
  VenturaProdPublicRouteTable1Assoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VenturaProdNATalbSN1
      RouteTableId: !Ref VenturaProdPublicRouteTable1

  VenturaProdPublicRouteTable2Assoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VenturaProdALBSN2
      RouteTableId: !Ref VenturaProdPublicRouteTable2
  
  VenturaProdWebSN1RouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VenturaProdWebSN1
      RouteTableId: !Ref VenturaProdWebRouteTable1

  VenturaProdWebSN2RouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VenturaProdWebSN2
      RouteTableId: !Ref VenturaProdWebRouteTable2

  VenturaProdAppSN1RouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VenturaProdAppSN1
      RouteTableId: !Ref VenturaProdAppRouteTable1

  VenturaProdAppSN2RouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VenturaProdAppSN2
      RouteTableId: !Ref VenturaProdAppRouteTable2

  VenturaProdDBSN1RouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VenturaProdDBSN1
      RouteTableId: !Ref VenturaProdDBRouteTable1

  VenturaProdDBSN2RouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VenturaProdDBSN2
      RouteTableId: !Ref VenturaProdDBRouteTable2

  ## NAT GATEWAY RESOURCES
  VenturaProdNatGateway1:
    Type: AWS::EC2::NatGateway
    DependsOn: VenturaProdNatGateway1EIP
    Properties:
      AllocationId: !GetAtt VenturaProdNatGateway1EIP.AllocationId
      SubnetId: !Ref VenturaProdNATalbSN1

  VenturaProdNatGateway2:
    Type: AWS::EC2::NatGateway
    DependsOn: VenturaProdNatGateway2EIP
    Properties:
      AllocationId: !GetAtt VenturaProdNatGateway2EIP.AllocationId
      SubnetId: !Ref VenturaProdALBSN2
  
  ## EIP RESOURCES
  VenturaProdNatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: VenturaProdNATalbSN1
    Properties:
      Domain: vpc

  VenturaProdNatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn: VenturaProdALBSN2
    Properties:
      Domain: vpc
  
  ## ROUTE TABLE ROUTES
  VenturaProdPublicRouteTable1PublicRoute:
      Type: AWS::EC2::Route
      Properties:
        RouteTableId: !Ref VenturaProdPublicRouteTable1
        DestinationCidrBlock: 0.0.0.0/0
        GatewayId: !Ref VenturaProdIgw
  
  VenturaProdPublicRouteTable2PublicRoute:
      Type: AWS::EC2::Route
      Properties:
        RouteTableId: !Ref VenturaProdPublicRouteTable2
        DestinationCidrBlock: 0.0.0.0/0
        GatewayId: !Ref VenturaProdIgw

  VenturaProdWebRouteTable1NATgatewayRoute:
    Type: AWS::EC2::Route
    DependsOn: VenturaProdNatGateway1EIP
    Properties:
      RouteTableId: !Ref VenturaProdWebRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref VenturaProdNatGateway1

  VenturaProdWebRouteTable2NATgatewayRoute:
    Type: AWS::EC2::Route
    DependsOn: VenturaProdNatGateway2EIP
    Properties:
      RouteTableId: !Ref VenturaProdWebRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref VenturaProdNatGateway2

  VenturaProdAppRouteTable1NATgatewayRoute:
    Type: AWS::EC2::Route
    DependsOn: VenturaProdNatGateway1EIP
    Properties:
      RouteTableId: !Ref VenturaProdAppRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref VenturaProdNatGateway1

  VenturaProdAppRouteTable2NATgatewayRoute:
    Type: AWS::EC2::Route
    DependsOn: VenturaProdNatGateway2EIP
    Properties:
      RouteTableId: !Ref VenturaProdAppRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref VenturaProdNatGateway2

  VenturaProdDBRouteTable1NATgatewayRoute:
    Type: AWS::EC2::Route
    DependsOn: VenturaProdNatGateway1EIP
    Properties:
      RouteTableId: !Ref VenturaProdDBRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref VenturaProdNatGateway1

  VenturaProdDBRouteTable2NATgatewayRoute:
    Type: AWS::EC2::Route
    DependsOn: VenturaProdNatGateway2EIP
    Properties:
      RouteTableId: !Ref VenturaProdDBRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref VenturaProdNatGateway2
  
  ## SECURITY GROUPS
  VenturaProdWebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: VenturaProdWebSecurityGroup
      GroupDescription: This security group is meant for the VenturaProdWebServers
      VpcId: !Ref VenturaProdVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !GetAtt VenturaProdFrontEndLBSecurityGroup.GroupId
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 192.168.255.255/32
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !GetAtt VenturaProdFrontEndLBSecurityGroup.GroupId
      Tags:
        - Key: Name
          Value: VenturaProdWebSecurityGroup
  
  VenturaProdAppSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: VenturaProdAppSecurityGroup
      GroupDescription: This security group is meant for the VenturaProdWebServers
      VpcId: !Ref VenturaProdVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !GetAtt VenturaProdBackEndLBSecurityGroup.GroupId
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 192.168.255.255/32
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !GetAtt VenturaProdBackEndLBSecurityGroup.GroupId
      Tags:
        - Key: Name
          Value: VenturaProdAppSecurityGroup
  
  VenturaProdDBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: VenturaProdDBSecurityGroup
      GroupDescription: This security group is meant for the VenturaProdWebServers
      VpcId: !Ref VenturaProdVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !GetAtt VenturaProdAppSecurityGroup.GroupId
      Tags:
        - Key: Name
          Value: VenturaProdDBSecurityGroup
  
  VenturaProdFrontEndLBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: VenturaProdFrontEndLBSecurityGroup
      GroupDescription: This security group will be used at the FrontEnd
      VpcId: !Ref VenturaProdVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: VenturaProdFrontEndLBSecurityGroup
  
  VenturaProdBackEndLBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: VenturaProdAppBackEndLBSecurityGroup
      GroupDescription: This security group will be used at the Application BackEnd
      VpcId: !Ref VenturaProdVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !GetAtt VenturaProdWebSecurityGroup.GroupId
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !GetAtt VenturaProdWebSecurityGroup.GroupId
      Tags:
        - Key: Name
          Value: VenturaProdAppBackEndLBSecurityGroup

############################################################################
# WebServers Launch Configuration & Autoscaling Group creation with policies
############################################################################
  #WEB SERVERS
  VenturaProdWebServer1:
    Type: 'AWS::EC2::Instance'
    Properties:
      AvailabilityZone: "us-east-1a"
      ImageId: ami-05fa00d4c63e32376
      InstanceType: t2.micro
      KeyName: work-mac-os
      SubnetId: !Ref VenturaProdWebSN1
      SecurityGroupIds:
        - !Ref VenturaProdWebSecurityGroup
      Tags:
        - Key: Name
          Value: VenturaProdWebServer1
  
  VenturaProdWebServer2:
    Type: 'AWS::EC2::Instance'
    Properties:
      AvailabilityZone: us-east-1b
      ImageId: ami-05fa00d4c63e32376
      InstanceType: t2.micro
      KeyName: work-mac-os
      SubnetId: !Ref VenturaProdWebSN2
      SecurityGroupIds:
        - !Ref VenturaProdWebSecurityGroup
      Tags:
        - Key: Name
          Value: VenturaProdWebServer2
  # APP SERVERS
  VenturaProdAppServer1:
    Type: 'AWS::EC2::Instance'
    Properties:
      AvailabilityZone: "us-east-1a"
      ImageId: ami-05fa00d4c63e32376
      InstanceType: t2.micro
      KeyName: work-mac-os
      SubnetId: !Ref VenturaProdAppSN1
      SecurityGroupIds:
        - !Ref VenturaProdAppSecurityGroup
      Tags:
        - Key: Name
          Value: VenturaProdAppServer1
  
  VenturaProdAppServer2:
    Type: 'AWS::EC2::Instance'
    Properties:
      AvailabilityZone: us-east-1b
      ImageId: ami-05fa00d4c63e32376
      InstanceType: t2.micro
      KeyName: work-mac-os
      SubnetId: !Ref VenturaProdAppSN2
      SecurityGroupIds:
        - !Ref VenturaProdAppSecurityGroup
      Tags:
        - Key: Name
          Value: VenturaProdAppServer2

#======================================================================
# This section will define the Load Balancer, Listener Target Group, Launch Configuration, Autoscaling, Autoscaling Policies
#====================================================================== 
  VenturaProdFrontEndWebLB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: FrontEndLB
      Subnets:
        - !Ref VenturaProdNATalbSN1
        - !Ref VenturaProdALBSN2
      SecurityGroups:
        - !Ref VenturaProdFrontEndLBSecurityGroup
      Tags:
        - Key: Name
          Value: VenturaProdFrontEndWebLB

  VenturaProdFrontEndLBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref VenturaProdFrontEndWebLB
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref VenturaProdFrontEndWebLBtg

  VenturaProdFrontEndWebLBtg: 
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: VenturaProdFrontEndWebLBtg
      VpcId: !Ref VenturaProdVPC
      Port: 80
      Protocol: HTTP
      TargetType: instance
      Targets: 
       - Id: !Ref VenturaProdWebServer1
         Port: 80
       - Id: !Ref VenturaProdWebServer2
         Port: 80

  # Application/Internal/BackEnd Loadbalancer
  VenturaProdBackEndAppLB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: BackEndLB
      Scheme: internal
      Subnets:
        - !Ref VenturaProdAppSN1
        - !Ref VenturaProdAppSN2
      SecurityGroups:
        - !Ref VenturaProdBackEndLBSecurityGroup
      Tags:
        - Key: Name
          Value: VenturaProdBackEndAppLB

  VenturaProdBackEndAppLBtg: 
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: VenturaProdBackEndAppLBtg
      VpcId: !Ref VenturaProdVPC
      Port: 80
      Protocol: HTTP
      TargetType: instance
      Targets: 
       - Id: !Ref VenturaProdAppServer1
         Port: 80
       - Id: !Ref VenturaProdAppServer2
         Port: 80
  
  VenturaProdBackEndAppLBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref VenturaProdBackEndAppLB
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref VenturaProdBackEndAppLBtg

  ## RDS Subnet Group
  # VenturaProdDBSubnetGroup:
  #   Type: AWS::RDS::DBSubnetGroup
  #   Properties:
  #     DBSubnetGroupDescription: Ventura Database Subnet Group
  #     SubnetIds:
  #       - !Ref VenturaProdDBSN1
  #       - !Ref VenturaProdDBSN2
  #     Tags:
  #       - Key: Name
  #         Value: VenturaProdDBSubnetGroup

  ## RDS MySQL DATABASE
  # VenturaProdDB:
  #   Type: AWS::RDS::DBInstance
  #   Properties:
  #     AllocatedStorage: 20
  #     DBInstanceClass: db.m5.large
  #     AvailabilityZone: us-east-1a
  #     DBInstanceIdentifier: venturadb
  #     DBName: venturadb
  #     DBSecurityGroups: 
  #       - !GetAtt VenturaProdDBSecurityGroup.GroupId 
  #     DBSubnetGroupName: !Ref VenturaProdDBSubnetGroup
  #     Engine: mysql
  #     MasterUsername: admin
  #     MasterUserPassword: venturadbpassword
  #     MultiAZ: false
  #     PubliclyAccessible: false
  #     StorageEncrypted: true
  #     VPCSecurityGroups:
  #       - !Ref VenturaProdDBSecurityGroup
  #     Tags:
  #       - Key: Name
  #         Value: VenturaProdDB


Outputs: {}
